// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Ribbon> renders default Ribbon 1`] = `
<span
  className="Van-Ribbon"
>
  My Ribbon
</span>
`;

exports[`<Ribbon> renders with specific attributes 1`] = `
<span
  className="Van-Ribbon"
  data-id="0"
>
  My Ribbon
</span>
`;

exports[`<Ribbon> renders with specific className 1`] = `
<span
  className="Van-Ribbon my-class"
>
  My Ribbon
</span>
`;
